@@ -15,6 +15,7 @@
 # define va_char char
 #endif
 
+#ifndef __SDCC_pic16
 static {type1}
 returnFirstArg(int marker, ...)
 {
@@ -80,10 +81,12 @@ returnThirdArg(int marker, ...)
     LOG(("Returning %u\n", i));
     return i;
 }
+#endif
 
 void
 testArgs(void)
 {
+#ifndef __SDCC_pic16
     int marker = 12;
 
     LOG(("First arg: %u\n", returnFirstArg(marker, ({type1})123, ({type2})45, ({type3})67)));
@@ -98,5 +101,6 @@ testArgs(void)
 
     ASSERT(returnThirdArg(marker, ({type1})-33, ({type2})-34, ({type3})-35) == ({type3})-35);
     ASSERT(returnThirdArg(marker, ({type1})-33, ({type2})-34, ({type3})35) == ({type3})35);
+#endif
 }
 
